# kor-minish

./: .gitignore  DEMO.md  Dockerfile  LICENSE  README.md  benchmark_keke_code.py  build_vocab.py  convert_aihub_dialog.py  distill.py  distill_colab.ipynb  download_domain_corpus.py  download_korean_datasets.py  download_v4_data.py  evaluate.py  export_onnx.py  push_keke_code.py  push_to_hf.py  pyproject.toml  sample_v3_data.py  summarize.py  test_embed.py  train_colab.ipynb  train_colab_v3.ipynb  train_keke_code_runpod.py
data/v3/: vocab_ko.txt
examples/: Client.java  README.md  client.js  curl.sh  onnx_demo.py
kor_minish/: __init__.py  cli.py  data_loader.py  train.py
server/: server.py
