[project]
name = "kor-minish"
version = "0.1.0"
description = "Korean static embeddings distilled from BAAI/bge-m3 with model2vec"
requires-python = ">=3.10,<3.13"
dependencies = [
    "model2vec[distill]>=0.6.0",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "datasets>=2.19",
    "kiwipiepy>=0.17",
    "tqdm>=4.66",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
]

[project.scripts]
kor-minish = "kor_minish.cli:main"

[project.optional-dependencies]
onnx = [
    "onnx>=1.16",
    "onnxruntime>=1.18",
    "tokenizers>=0.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kor_minish"]
